[package]
name = "logik_simulation"
version = "0.1.0"
authors = ["Julius Häger <julius_hager@hotmail.com>", "Eskil Queseth <eskilq@kth.se>"]
edition = "2018"

[lib]
name = "logik_simulation"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
